; ModuleID = '/home/carl/AnghaBench/mongoose/extr_mongoose.c_mg_is_error.c'
source_filename = "/home/carl/AnghaBench/mongoose/extr_mongoose.c_mg_is_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINPROGRESS = common dso_local global i32 0, align 4
@EWOULDBLOCK = common dso_local global i32 0, align 4
@EAGAIN = common dso_local global i32 0, align 4
@EINTR = common dso_local global i32 0, align 4
@WSAEINTR = common dso_local global i64 0, align 8
@WSAEWOULDBLOCK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @mg_is_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mg_is_error() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @mg_get_errno()
  store i32 %2, i32* %1, align 4
  %3 = load i32, i32* %1, align 4
  %4 = load i32, i32* @EINPROGRESS, align 4
  %5 = icmp ne i32 %3, %4
  br i1 %5, label %6, label %18

6:                                                ; preds = %0
  %7 = load i32, i32* %1, align 4
  %8 = load i32, i32* @EWOULDBLOCK, align 4
  %9 = icmp ne i32 %7, %8
  br i1 %9, label %10, label %18

10:                                               ; preds = %6
  %11 = load i32, i32* %1, align 4
  %12 = load i32, i32* @EAGAIN, align 4
  %13 = icmp ne i32 %11, %12
  br i1 %13, label %14, label %18

14:                                               ; preds = %10
  %15 = load i32, i32* %1, align 4
  %16 = load i32, i32* @EINTR, align 4
  %17 = icmp ne i32 %15, %16
  br label %18

18:                                               ; preds = %14, %10, %6, %0
  %19 = phi i1 [ false, %10 ], [ false, %6 ], [ false, %0 ], [ %17, %14 ]
  %20 = zext i1 %19 to i32
  ret i32 %20
}

declare dso_local i32 @mg_get_errno(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
